force-app/main/default/objects/PaymentStatus__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>납부 예정일</description>
    <label>DueDate</label>
    <type>Date</type>
</CustomField>