force-app/main/default/objects/PaymentStatus__c/fields/IsOverdue__c.field-meta.xml
<CustomField>
    <fullName>IsOverdue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>연체 여부</description>
    <inlineHelpText>연체 여부</inlineHelpText>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>