force-app/main/default/objects/PaymentStatus__c/fields/LastCheckedDate__c.field-meta.xml
<CustomField>
    <fullName>LastCheckedDate__c</fullName>
    <description>마지막 확인 일시</description>
    <inlineHelpText>마지막 확인 일시</inlineHelpText>
    <label>Last Checked Date</label>
    <type>DateTime</type>
</CustomField>