force-app/main/default/objects/PaymentStatus__c/fields/Link_Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>Link_Payment_URL__c</fullName>
    <description>링크납부 URL</description>
    <label>Link Payment URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>