force-app/main/default/objects/PaymentStatus__c/fields/NextCheckDate__c.field-meta.xml
<CustomField>
    <fullName>NextCheckDate__c</fullName>
    <description>다음 확인 예정 일시</description>
    <inlineHelpText>다음 확인 예정 일시</inlineHelpText>
    <label>Next Check Date</label>
    <type>DateTime</type>
</CustomField>