force-app/main/default/objects/PaymentStatus__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Order가 삭제되면 납부 현황도 함께 삭제</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Payment_status</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>