force-app/main/default/objects/PaymentStatus__c/fields/OrgTranId__c.field-meta.xml
<CustomField>
    <fullName>OrgTranId__c</fullName>
    <description>거래 식별자</description>
    <inlineHelpText>거래 식별자</inlineHelpText>
    <label>Org Transaction ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>