force-app/main/default/objects/PaymentStatus__c/fields/PayAmount__c.field-meta.xml
<CustomField>
    <fullName>PayAmount__c</fullName>
    <description>납부 금액</description>
    <inlineHelpText>납부 금액</inlineHelpText>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>