force-app/main/default/objects/PaymentStatus__c/fields/Payment_Bank__c.field-meta.xml
<CustomField>
    <fullName>Payment_Bank__c</fullName>
    <description>납부 금융기관</description>
    <label>Payment Bank</label>
    <length>50</length>
    <type>Text</type>
</CustomField>