force-app/main/default/objects/PaymentStatus__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>실제 납부일시</description>
    <label>Payment Date</label>
    <type>DateTime</type>
</CustomField>