force-app/main/default/objects/PaymentStatus__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <description>납부 일자</description>
    <inlineHelpText>납부 일자</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>