force-app/main/default/objects/PaymentStatus__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <description>납부 방법</description>
    <inlineHelpText>납부 방법</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>카드</fullName>
            </value>
            <value>
                <fullName>계좌이체</fullName>
            </value>
            <value>
                <fullName>가상계좌</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>