force-app/main/default/objects/PaymentStatus__c/fields/PtcoCode__c.field-meta.xml
<CustomField>
    <fullName>PtcoCode__c</fullName>
    <description>납부 회사 코드</description>
    <inlineHelpText>납부 회사 코드</inlineHelpText>
    <label>Payment Company Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>