force-app/main/default/objects/PaymentStatus__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>미납</fullName>
            </value>
            <value>
                <fullName>완납</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>