force-app/main/default/objects/PaymentStatus__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>Giro API 거래 고유번호</description>
    <externalId>true</externalId>
    <label>Transaction ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>